# optima_zatca

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
optima_zatca/: hooks.py  modules.txt  patches.txt  utils.py
optima_zatca/events/: sales_invoice.py
optima_zatca/files/: registration_type.json  tax_category.json  tax_exemption.json
optima_zatca/patches/v15/: handle_optima_zatca.py
optima_zatca/public/: node_modules
optima_zatca/public/js/: branch.js  company.js  delivery_note.js  quotation.js  sales_invoice.js  sales_order.js
optima_zatca/public/zatca-onboarding/: zatca_onboarding.js
optima_zatca/startup/: boot.py
optima_zatca/translations/: ar.csv
optima_zatca/zatca/: api.py  demo.py  invoice.py  logs.py  request.py  setup.py  test_zatca.py  utils.py
optima_zatca/zatca/classes/: invoice.py  validate.py  xml.py
zatca-onboarding/: index.html  package.json  socket.ts  stats.html  tailwind.config.js  vite.config.ts
zatca-onboarding/src/: App.css  App.tsx  global.d.ts  main.tsx  types.ts  vite-env.d.ts
zatca-onboarding/src/app/: hooks.ts  store.ts
zatca-onboarding/src/components/: Button.tsx  Carousel.tsx  CustomModal.tsx  DoneDialog.tsx  EditingForm.tsx  Form.tsx  FormInput.tsx  Loading.tsx  OTP.tsx  OTPModal.tsx  RegistirationForm.tsx  SocketLoading.tsx  StepsContainer.tsx  Success.tsx
zatca-onboarding/src/constants/: index.ts
zatca-onboarding/src/data/: addingState.ts  commission.ts  currentPage.ts  currentStep.ts  dataSlice.ts  editModal.ts  stepSlice.ts  tour.ts
zatca-onboarding/src/pages/: Commision.tsx  Home.tsx  (+5 more)
(+36 files in other folders)
